# Nrf52840-ble-usb-hid-mouse-keyboard

./: Dockerfile  README.md
main/: CMakeLists.txt  Kconfig  app.overlay  main.c  prj.conf  prj_cdc.conf  prj_minimal.conf  sample.yaml  usb.overlay
main/inc/: ble_service.h  hid_keyboard.h  hid_mouse.h  nus_service.h  uart_async_adapter.h
main/src/: ble_service.c  hid_keyboard.c  hid_mouse.c  nus_service.c  uart_async_adapter.c
scripts/: build.py  clean.py  flash.py  monitor.py  unit_tests.py
tests/: CMakeLists.txt
tests/unit_tests/tests/example/: CMakeLists.txt  ut_example.cpp
